# memoria-somasafe-backend

./: .gitignore  Makefile  PLOTS.md  README.md  RESULTS.md  api.py  compose.yaml  example.env  get-dalia.py  get-dataset.py  main.py  pyproject.toml  run_all.sh  train-dalia.py  train-model.py  train.py
api/: auth.py  device.py  main.py  model.py  test.py
api/lib/: challenge.py  ratelimit.py  session.py
api/routes/: auth.py  device.py  model.py  ota.py  secure.py
api/test/: conftest.py  test_auth.py  test_device.py  test_model.py  test_ota.py  test_secure.py  test_secure_agg.py
common/: celery_tasks.py  challenge.py  compression.py  config.py  db.py  models.py  ratelimit.py  redis.py  secure_agg.py  storage.py
impl/: model.py  saving.py  training.py  utils.py
ml/: data.py  layers.py  loading.py  metrics.py  model_list.py  payload.py  preprocessing.py  saving.py  training.py
ml/models/: cnn_autoencoder.py  common.py  cond_lstm_autoencoder.py  feature_mlp.py  gru_autoencoder.py  lstm_autoencoder.py
ml/scripts/: train.py
scripts/: __init__.py  autoencoder_test.py  db_seed.py  distill_calibrate.py  distill_eval.py  distill_labels.py  export_subject_data.py  fed_client.py  get_dataset.py  personalize_test.py  plot_signals.py  queue_aggregation.py  secure_aggregation.py  secure_fed_client.py  seed_db.py  test_autoencoder.py  train.py  transfer_learn.py
scripts/common/: api.py  autoencoders.py  dsp.py  litert.py  plots.py  post_train.py  reports.py  scoring.py  secure.py
scripts/distillation/: distill_calibrate.py  distill_eval.py  distill_labels.py  personalize_test.py
scripts/figures/: anomaly_detection.py  byzantine.py  calibrate_fpr.py  footprint.py  knowledge_distillation.py  plot_calibration.py  plot_convergence.py  plot_signals.py  sensitivity.py  subject_roc.py  sweeps.py
scripts/integration/: fed_client.py  queue_aggregation.py  secure_aggregation.py
scripts/system/: export_subject_data.py  get_dataset.py  seed_db.py  train.py  transfer_learn.py
worker/: celery_app.py  dataset.py  model.py  optimizers.py  saving.py  tasks.py  training.py
worker/models/: __init__.py  cnn_autoencoder.py  common.py  cond_lstm_autoencoder.py  feature_mlp.py  gru_autoencoder.py  lstm_ae.py  lstm_autoencoder.py  mlp.py
worker/utils/: weight_validation.py
