[project]
name = "somasafe-backend"
version = "1.0.0"
description = "Backend component of SomaSafe"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "tensorflow==2.21.*",
    "matplotlib==3.10.*",
    "pyqt6==6.11.*",
    "ai-edge-litert>=2.1.4",
    "numpy>=2.4.*",
]

[dependency-groups]
dev = [
  "ipython",
  "types-tensorflow",
]

[tool.pyrefly]
python-platform = "linux"
project-includes = [
    "*.py",
]

[tool.pyrefly.errors]
implicit-import = false

[tool.fastapi]
entrypoint = "api:app"
